# puppet-octavia

./: .gitreview  .zuul.yaml  CONTRIBUTING.rst  README.md  metadata.json  setup.cfg
examples/: init.pp
manifests/: api.pp  audit.pp  certificates.pp  cinder.pp  client.pp  compute.pp  config.pp  controller.pp  cors.pp  db.pp  deps.pp  driver_agent.pp  glance.pp  health_manager.pp  healthcheck.pp  housekeeping.pp  init.pp  key_manager.pp  logging.pp  networking.pp  neutron.pp  nova.pp  params.pp  policy.pp  quota.pp  reports.pp  roles.pp  service_auth.pp  task_flow.pp  worker.pp
manifests/db/: mysql.pp  postgresql.pp  sync.pp  sync_persistence.pp
manifests/key_manager/: barbican.pp
manifests/keystone/: auth.pp  authtoken.pp
manifests/provider/: ovn.pp
manifests/wsgi/: apache.pp  uwsgi.pp
releasenotes/notes/: add-amp-active-retries-amp-active-wait-sec-55a0d5c3c08dd866.yaml  add-amp-secgroup-list-d3dcc292465b0fe7.yaml  add-amp_image_owner_id-to-controller-11dca7ae392d1e17.yaml  add-amphora-project-name-0afeebd83e114328.yaml  add-anti-affinity-0f80e4ac5fd4bde6.yaml  add-api-enable_proxy_headers_parsing-e04ae349155978bc.yaml  add-api-handler-a935135d2345ef23.yaml  add-auth-strategy-99518a6623bcb665.yaml  add-build-active-retries-and-port-detach-timeout-parameters-5dc21de1a97699ef.yaml  add-certificates-configuration-6e956bd99e5c2a2b.yaml  add-connection-logging-parameter-d92bc438db6f51bb.yaml  add-connection-retry-params-61cf6df5afab51dc.yaml  add-controller_ip_port_list-dd70205aa2cc8182.yaml  (+147 more)
tests/: init.pp
types/: jobboardbackenddriver.pp
(+61 files in other folders)
